# docling-plugin-example

./: .gitignore  LICENSE  README.md  pyproject.toml
docling-main/: pyproject.toml
docling-main/src/docling_main/: __init__.py  japanese_space_remover.py  space_remover.py  table_cleaner.py
docling-plugin/: pyproject.toml
docling-plugin/src/docling_plugin/: __init__.py  vision_model.py  vision_schema.py
